--- a/render.yaml
+++ b/render.yaml
@@ -1,60 +1,53 @@
 databases:
-  - name: saas-template-db
+  - name: wealth-management-app-314276-db
     plan: free
-    region: frankfurt
-
+    databaseName: wealth_management_app_314276_db
+    user: wealth_management_app_314276_db_user
+    region: oregon
+    ipAllowList: []
 services:
-  # Backend API (NestJS)
   - type: web
-    name: saas-template-api
+    name: wealth-management-app-314276-api
     runtime: node
-    region: frankfurt
+    region: oregon
     plan: free
-    branch: main
-    buildCommand: pnpm install && pnpm build:api
-    startCommand: pnpm start:api
+    buildCommand: cd apps/api && npm install && npm run build
+    startCommand: "cd apps/api && npm run start:prod"
     healthCheckPath: /api/v1/health
+    autoDeploy: true
     envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: wealth-management-app-314276-db
+          property: connectionString
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 10000
-      - key: API_PREFIX
-        value: /api/v1
-      - key: DATABASE_URL
-        fromDatabase:
-          name: saas-template-db
-          property: connectionString
+        value: 3001
       - key: JWT_SECRET
         generateValue: true
-      - key: JWT_EXPIRY
-        value: 1d
-      - key: JWT_REFRESH_SECRET
-        generateValue: true
-      - key: JWT_REFRESH_EXPIRY
-        value: 7d
-      - key: CORS_ORIGIN
-        fromService:
-          type: web
-          name: saas-template-frontend
-          envVarKey: RENDER_EXTERNAL_URL
-      - key: THROTTLE_TTL
-        value: 60
-      - key: THROTTLE_LIMIT
-        value: 100
-
-  # Frontend (Next.js)
   - type: web
-    name: saas-template-frontend
-    runtime: node
-    region: frankfurt
-    plan: free
-    branch: main
-    buildCommand: pnpm install && pnpm build:frontend
-    startCommand: pnpm start:frontend
+    name: wealth-management-app-314276-frontend
+    runtime: static
+    region: oregon
+    buildCommand: cd apps/frontend && npm install && npm run build
+    staticPublishPath: apps/frontend/out
+    pullRequestPreviewsEnabled: false
+    autoDeploy: true
     envVars:
-      - key: NODE_ENV
-        value: production
-      # NEXT_PUBLIC_API_URL must be set manually in Render Dashboard
-      # Format: https://your-backend-service.onrender.com/api/v1
-      # See DEPLOYMENT.md for details
+      - key: NEXT_PUBLIC_API_URL
+        fromService:
+          name: wealth-management-app-314276-api
+          type: web
+          envVarKey: RENDER_EXTERNAL_URL
+    headers:
+      - path: /*
+        name: X-Frame-Options
+        value: DENY
+      - path: /*
+        name: X-Content-Type-Options
+        value: nosniff
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
